--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
 
-  "proxy": "http://localhost:5000",
+  "proxy": "https://todoappserver-na5p.onrender.com",
 
   "browserslist": {
     "production": [
