--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,9 +24,7 @@
       "react-app/jest"
     ]
   },
-
   "proxy": "https://todoappserver-na5p.onrender.com",
-
   "browserslist": {
     "production": [
       ">0.2%",
